# SputnikEngine

./: .gitignore  CMakeLists.txt  README.md  test.srp  test1.srp
SputnikResourcePacker/: CMakeLists.txt  mod.srp
SputnikResourcePacker/src/: main.cpp
include/: Animation.hpp  App.hpp  Audio.hpp  Collision.hpp  Color.hpp  Exceptions.hpp  Fade.hpp  Font.hpp  Input.hpp  Language.hpp  Object.hpp  Platform.hpp  Renderer.hpp  Resource.hpp  Scene.hpp  Utils.hpp  Vector2.hpp
src/: Animation.cpp  App.cpp  Audio.cpp  Collision.cpp  Exceptions.cpp  Fade.cpp  Font.cpp  Input.cpp  Language.cpp  Object.cpp  Renderer.cpp  Resource.cpp  Scene.cpp
src/gamefiles/: InputActions.hpp  config.hpp  engine_config.hpp  gamemain.cpp  gamemain.hpp  resources.h
src/gamefiles/cpp_resources/: res_logopng.cpp  res_spritepng.cpp  res_tilespng.cpp
src/gamefiles/scenes/: Level.cpp  Level.hpp  Logo.cpp  Logo.hpp
src/platform/: RenderersAll.hpp  SDL_common.cpp  Windows.cpp
src/renderers/: SDL2.cpp  SDL2.hpp  SDL_GPU.cpp  SDL_GPU.hpp
